fixed the gap in the footer

--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,14 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 .footerMenu {
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  position: relative; /* Changed from fixed to relative */
   background-color: #dfe1e2;
-  margin-top: 100px;
   width: 100%;
   z-index: 1;
+  box-sizing: border-box;
+  box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.103); /* Added shadow */
 }
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
@@ -19,11 +19,13 @@
   text-decoration: none;
   color: #161617;
 }
+
 .footerIcons {
   display: flex;
   justify-content: space-evenly;
-  border-bottom-style: solid;
   align-items: center;
+
+  padding-top: 1%;
 }
 
 .socialIcon {
@@ -37,11 +39,11 @@
 }
 
 .copyright {
-  border-bottom-style: solid;
   text-align: center;
   margin: 0 auto;
   padding-top: 5px;
   padding-bottom: 5px;
+  font-size: 150%;
 }
 
 .legalStuff {
@@ -57,6 +59,9 @@
 }
 
 @media (max-width: 450px) {
+  .footerMenu {
+    width: 100%;
+  }
   .copyright {
     font-size: 70%;
   }
